@@ -118,7 +118,7 @@ function ngg_likeThisMetaBox() {
 
 	$url = 'http://alexrabe.de/wordpress-plugins/wordtube/translation-of-plugins/';
 	echo "<li style='padding-left: 38px; background:transparent url(" . NGGALLERY_URLPATH . "admin/images/icon-translate.png ) no-repeat scroll center left; background-position: 16px 50%; text-decoration: none;'><a href='{$url}'>";
-	_e("Help to translating it.", 'nggallery');
+	_e("Help translating it.", 'nggallery');
 	echo "</a></li>";
 
 	echo '</ul>';
